research/code/test/zm/build_notes.txt
aiofiles aiomultiprocess chardet chromadb deepface fastparquet folium geopy gpsphoto ImageHash joblib keras_facenet matplotlib mtcnn numpy openai_clip opencv_contrib_python opencv_python
opencv_python_headless pandas Pillow plotly py3exiv2 pyiqa PyYAML scikit_learn streamlit streamlit_folium streamlit_image_select streamlit_tree_select tensorflow tensorflow_cpu torch torchvision transformers

uv python install 3.9

uv venv --python 3.9

uv python pin 3.9

uv add open-clip-torch
uv add tf-keras
uv add piexif
uv add exifread
uv add country_converter

source .venv/bin/activate


 + absl-py==2.3.1
 + accelerate==1.10.0
 + addict==2.4.0
 + aiofiles==24.1.0
 + aiomultiprocess==0.9.1
 + altair==5.5.0
 + annotated-types==0.7.0
 + anyio==4.10.0
 + asgiref==3.9.1
 + asttokens==3.0.0
 + astunparse==1.6.3
 + attrs==25.3.0
 + backoff==2.2.1
 + bcrypt==4.3.0
 + beautifulsoup4==4.13.4
 + bitsandbytes==0.47.0
 + blinker==1.9.0
 + branca==0.8.1
 + build==1.3.0
 + cachetools==5.5.2
 + certifi==2025.8.3
 + cfgv==3.4.0
 + chardet==4.0.0
 + charset-normalizer==3.4.3
 + chroma-hnswlib==0.7.6
 + chromadb==0.6.3
 + click==8.2.1
 + colorama==0.4.6
 + coloredlogs==15.0.1
 + contourpy==1.3.2
 + cramjam==2.11.0
 + cycler==0.12.1
 + deepface==0.0.93
 + deprecated==1.2.18
 + distlib==0.4.0
 + distro==1.9.0
 + durationpy==0.10
 + einops==0.8.1
 + exceptiongroup==1.3.0
 + executing==2.2.0
 + facexlib==0.3.0
 + fastapi==0.116.1
 + fastparquet==2024.11.0
 + filelock==3.19.1
 + filterpy==1.4.5
 + fire==0.7.1
 + flask==3.1.1
 + flask-cors==6.0.1
 + flatbuffers==25.2.10
 + folium==0.17.0
 + fonttools==4.59.1
 + fsspec==2025.7.0
 + ftfy==6.3.1
 + future==1.0.0
 + gast==0.6.0
 + gdown==5.2.0
 + geographiclib==2.0
 + geopy==2.4.1
 + gitdb==4.0.12
 + gitpython==3.1.45
 + google-auth==2.40.3
 + google-pasta==0.2.0
 + googleapis-common-protos==1.70.0
 + gpsphoto==2.2.3
 + grpcio==1.74.0
 + gunicorn==23.0.0
 + h11==0.16.0
 + h5py==3.14.0
 + hf-xet==1.1.8
 + httpcore==1.0.9
 + httptools==0.6.4
 + httpx==0.28.1
 + huggingface-hub==0.34.4
 + humanfriendly==10.0
 + icecream==2.1.7
 + identify==2.6.13
 + idna==3.10
 + imagehash==4.3.1
 + imageio==2.37.0
 + importlib-metadata==8.4.0
 + importlib-resources==6.5.2
 + iniconfig==2.1.0
 + itsdangerous==2.2.0
 + jinja2==3.1.6
 + joblib==1.4.2
 + jsonschema==4.25.1
 + jsonschema-specifications==2025.4.1
 + keras==3.11.2
 + keras-facenet==0.3.2
 + kiwisolver==1.4.9
 + kubernetes==33.1.0
 + lazy-loader==0.4
 + libclang==18.1.1
 + llvmlite==0.44.0
 + lmdb==1.7.3
 + lz4==4.4.4
 + markdown==3.8.2
 + markdown-it-py==4.0.0
 + markupsafe==3.0.2
 + matplotlib==3.10.5
 + mdurl==0.1.2
 + ml-dtypes==0.3.2
 + mmh3==5.2.0
 + mpmath==1.3.0
 + mtcnn==1.0.0
 + namex==0.1.0
 + narwhals==2.1.2
 + networkx==3.4.2
 + nodeenv==1.9.1
 + numba==0.61.2
 + numpy==1.26.4
 + nvidia-cublas-cu12==12.1.3.1
 + nvidia-cuda-cupti-cu12==12.1.105
 + nvidia-cuda-nvrtc-cu12==12.1.105
 + nvidia-cuda-runtime-cu12==12.1.105
 + nvidia-cudnn-cu12==8.9.2.26
 + nvidia-cufft-cu12==11.0.2.54
 + nvidia-curand-cu12==10.3.2.106
 + nvidia-cusolver-cu12==11.4.5.107
 + nvidia-cusparse-cu12==12.1.0.106
 + nvidia-nccl-cu12==2.20.5
 + nvidia-nvjitlink-cu12==12.9.86
 + nvidia-nvtx-cu12==12.1.105
 + oauthlib==3.3.1
 + onnxruntime==1.22.1
 + openai-clip==1.0.1
 + opencv-contrib-python==4.11.0.86
 + opencv-python==4.10.0.84
 + opencv-python-headless==4.11.0.86
 + opentelemetry-api==1.27.0
 + opentelemetry-exporter-otlp-proto-common==1.27.0
 + opentelemetry-exporter-otlp-proto-grpc==1.27.0
 + opentelemetry-instrumentation==0.48b0
 + opentelemetry-instrumentation-asgi==0.48b0
 + opentelemetry-instrumentation-fastapi==0.48b0
 + opentelemetry-proto==1.27.0
 + opentelemetry-sdk==1.27.0
 + opentelemetry-semantic-conventions==0.48b0
 + opentelemetry-util-http==0.48b0
 + opt-einsum==3.4.0
 + optree==0.17.0
 + orjson==3.11.2
 + overrides==7.7.0
 + packaging==24.2
 + pandas==2.3.1
 + pillow==10.1.0
 + platformdirs==4.3.8
 + plotly==5.24.1
 + pluggy==1.6.0
 + posthog==6.6.0
 + pre-commit==4.3.0
 + protobuf==4.25.8
 + psutil==7.0.0
 + py3exiv2==0.12.0
 + pyarrow==21.0.0
 + pyasn1==0.6.1
 + pyasn1-modules==0.4.2
 + pydantic==2.11.7
 + pydantic-core==2.33.2
 + pydeck==0.9.1
 + pygments==2.19.2
 + pyiqa==0.1.13
 + pyparsing==3.2.3
 + pypika==0.48.9
 + pyproject-hooks==1.2.0
 + pysocks==1.7.1
 + pytest==8.4.1
 + python-dateutil==2.9.0.post0
 + python-dotenv==1.1.1
 + pytz==2025.2
 + pywavelets==1.8.0
 + pyyaml==6.0.2
 + referencing==0.36.2
 + regex==2025.7.34
 + requests==2.32.5
 + requests-oauthlib==2.0.0
 + retina-face==0.0.17
 + rich==13.9.4
 + rpds-py==0.27.0
 + rsa==4.9.1
 + safetensors==0.6.2
 + scikit-image==0.25.2
 + scikit-learn==1.7.1
 + scipy==1.15.3
 + sentencepiece==0.2.1
 + setuptools==80.9.0
 + shellingham==1.5.4
 + six==1.17.0
 + smmap==5.0.2
 + sniffio==1.3.1
 + soupsieve==2.7
 + starlette==0.47.2
 + streamlit==1.39.0
 + streamlit-folium==0.22.1
 + streamlit-image-select==0.6.0
 + streamlit-tree-select==0.0.5
 + sympy==1.14.0
 + tenacity==9.1.2
 + tensorboard==2.16.2
 + tensorboard-data-server==0.7.2
 + tensorflow==2.16.1
 + tensorflow-cpu==2.16.1
 + tensorflow-io-gcs-filesystem==0.37.1
 + termcolor==3.1.0
 + threadpoolctl==3.6.0
 + tifffile==2025.5.10
 + timm==1.0.19
 + tokenizers==0.15.2
 + toml==0.10.2
 + tomli==2.2.1
 + torch==2.3.1
 + torchvision==0.18.1
 + tornado==6.5.2
 + tqdm==4.67.1
 + transformers==4.37.2
 + triton==2.3.1
 + typer==0.16.1
 + typing-extensions==4.14.1
 + typing-inspection==0.4.1
 + tzdata==2025.2
 + urllib3==2.5.0
 + uvicorn==0.35.0
 + uvloop==0.21.0
 + virtualenv==20.34.0
 + watchdog==5.0.3
 + watchfiles==1.1.0
 + wcwidth==0.2.13
 + websocket-client==1.8.0
 + websockets==15.0.1
 + werkzeug==3.1.3
 + wheel==0.45.1
 + wrapt==1.17.3
 + xyzservices==2025.4.0
 + yapf==0.43.0
 + zipp==3.23.0

  error: subprocess-exited-with-error
  
  × Running setup.py install for py3exiv2 did not run successfully.
  │ exit code: 1
  ╰─> [71 lines of output]
      running install
      /usr/local/lib/python3.10/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
        warnings.warn(
      running build
      running build_py
      creating build
      creating build/lib.linux-x86_64-cpython-310
      creating build/lib.linux-x86_64-cpython-310/pyexiv2
      copying src/pyexiv2/preview.py -> build/lib.linux-x86_64-cpython-310/pyexiv2
      copying src/pyexiv2/iptc.py -> build/lib.linux-x86_64-cpython-310/pyexiv2
      copying src/pyexiv2/xmp.py -> build/lib.linux-x86_64-cpython-310/pyexiv2
      copying src/pyexiv2/utils.py -> build/lib.linux-x86_64-cpython-310/pyexiv2
      copying src/pyexiv2/__init__.py -> build/lib.linux-x86_64-cpython-310/pyexiv2
      copying src/pyexiv2/exif.py -> build/lib.linux-x86_64-cpython-310/pyexiv2
      copying src/pyexiv2/metadata.py -> build/lib.linux-x86_64-cpython-310/pyexiv2
      running build_ext
      building 'libexiv2python' extension
      creating build/temp.linux-x86_64-cpython-310
      creating build/temp.linux-x86_64-cpython-310/src
      gcc -pthread -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -fPIC -I/usr/local/include/python3.10 -c src/exiv2wrapper.cpp -o build/temp.linux-x86_64-cpython-310/src/exiv2wrapper.o -g -std=c++11
      In file included from /usr/include/boost/smart_ptr/detail/sp_thread_sleep.hpp:22,
                       from /usr/include/boost/smart_ptr/detail/yield_k.hpp:23,
                       from /usr/include/boost/smart_ptr/detail/spinlock_gcc_atomic.hpp:14,
                       from /usr/include/boost/smart_ptr/detail/spinlock.hpp:42,
                       from /usr/include/boost/smart_ptr/detail/spinlock_pool.hpp:25,
                       from /usr/include/boost/smart_ptr/shared_ptr.hpp:29,
                       from /usr/include/boost/shared_ptr.hpp:17,
                       from /usr/include/boost/python/converter/shared_ptr_to_python.hpp:12,
                       from /usr/include/boost/python/converter/arg_to_python.hpp:15,
                       from /usr/include/boost/python/call.hpp:15,
                       from /usr/include/boost/python/object_core.hpp:14,
                       from /usr/include/boost/python/args.hpp:22,
                       from /usr/include/boost/python.hpp:11,
                       from src/exiv2wrapper.hpp:35,
                       from src/exiv2wrapper.cpp:27:
      /usr/include/boost/bind.hpp:36:1: note: ‘#pragma message: The practice of declaring the Bind placeholders (_1, _2, ...) in the global namespace is deprecated. Please use <boost/bind/bind.hpp> + using namespace boost::placeholders, or define BOOST_BIND_GLOBAL_PLACEHOLDERS to retain the current behavior.’
         36 | BOOST_PRAGMA_MESSAGE(
            | ^~~~~~~~~~~~~~~~~~~~
      /usr/include/boost/detail/iterator.hpp:13:1: note: ‘#pragma message: This header is deprecated. Use <iterator> instead.’
         13 | BOOST_HEADER_DEPRECATED("<iterator>")
            | ^~~~~~~~~~~~~~~~~~~~~~~
      src/exiv2wrapper.cpp: In function ‘void exiv2wrapper::unregisterXmpNs(const string&)’:
      src/exiv2wrapper.cpp:2049:37: warning: unused variable ‘info’ [-Wunused-variable]
       2049 |             const Exiv2::XmpNsInfo* info = Exiv2::XmpProperties::nsInfo(prefix);
            |                                     ^~~~
      gcc -pthread -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -fPIC -I/usr/local/include/python3.10 -c src/exiv2wrapper_python.cpp -o build/temp.linux-x86_64-cpython-310/src/exiv2wrapper_python.o -g -std=c++11
      In file included from /usr/include/boost/smart_ptr/detail/sp_thread_sleep.hpp:22,
                       from /usr/include/boost/smart_ptr/detail/yield_k.hpp:23,
                       from /usr/include/boost/smart_ptr/detail/spinlock_gcc_atomic.hpp:14,
                       from /usr/include/boost/smart_ptr/detail/spinlock.hpp:42,
                       from /usr/include/boost/smart_ptr/detail/spinlock_pool.hpp:25,
                       from /usr/include/boost/smart_ptr/shared_ptr.hpp:29,
                       from /usr/include/boost/shared_ptr.hpp:17,
                       from /usr/include/boost/python/converter/shared_ptr_to_python.hpp:12,
                       from /usr/include/boost/python/converter/arg_to_python.hpp:15,
                       from /usr/include/boost/python/call.hpp:15,
                       from /usr/include/boost/python/object_core.hpp:14,
                       from /usr/include/boost/python/args.hpp:22,
                       from /usr/include/boost/python.hpp:11,
                       from src/exiv2wrapper.hpp:35,
                       from src/exiv2wrapper_python.cpp:29:
      /usr/include/boost/bind.hpp:36:1: note: ‘#pragma message: The practice of declaring the Bind placeholders (_1, _2, ...) in the global namespace is deprecated. Please use <boost/bind/bind.hpp> + using namespace boost::placeholders, or define BOOST_BIND_GLOBAL_PLACEHOLDERS to retain the current behavior.’
         36 | BOOST_PRAGMA_MESSAGE(
            | ^~~~~~~~~~~~~~~~~~~~
      /usr/include/boost/detail/iterator.hpp:13:1: note: ‘#pragma message: This header is deprecated. Use <iterator> instead.’
         13 | BOOST_HEADER_DEPRECATED("<iterator>")
            | ^~~~~~~~~~~~~~~~~~~~~~~
      g++ -shared build/temp.linux-x86_64-cpython-310/src/exiv2wrapper.o build/temp.linux-x86_64-cpython-310/src/exiv2wrapper_python.o -L/usr/local/lib -lboost_python310 -lexiv2 -o build/lib.linux-x86_64-cpython-310/libexiv2python.cpython-310-x86_64-linux-gnu.so
      /usr/bin/ld: cannot find -lboost_python310
      collect2: error: ld returned 1 exit status
      error: command '/usr/bin/g++' failed with exit code 1
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: legacy-install-failure

× Encountered error while trying to install package.
╰─> py3exiv2

note: This is an issue with the package mentioned above, not pip.
hint: See above for output from the failure.

[notice] A new release of pip is available: 23.0.1 -> 25.2
[notice] To update, run: pip install --upgrade pip
The command '/bin/sh -c pip install --no-cache-dir  --default-timeout=900 -r requirements_1.txt' returned a non-zero code: 1
